--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,35 +8,21 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight"
         tools:targetApi="31">
 
-        <!-- Login Activity - Main Launcher -->
+        <!-- Main Activity - Landing Screen (Launcher) -->
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.MyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- Register Activity -->
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false"
-            android:label="Create Account"
-            android:parentActivityName=".LoginActivity" />
-
-        <!-- Main App Activity -->
-        <activity
-            android:name=".DeskTrackerApplication"
-            android:exported="false"
-            android:label="@string/app_name" />
 
     </application>
 
