feat: added login and register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/Theme.MyApp"/>
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:theme="@style/Theme.MyApp"/>
     </application>
 
 </manifest>
